<resources>
    <string name="app_name">Dotify</string>
    <string name="shuffle">Shuffle</string>
    <string name="change_user_button">Change User</string>
    <string name="default_username">Guest</string>
    <string name="song_img_desc">Song cover image</string>
    <string name="song_name">Song Name</string>
    <string name="artists">Artists</string>
    <string name="play_count">%d # plays</string>
    <string name="next_button_desc">Next button</string>
    <string name="play_button_desc">Play button</string>
    <string name="prev_button_desc">Previous Button</string>
    <string name="auto_fill_hints">New Username</string>
    <string name="song_summary">%s - %s</string>
    <string name="delete_song_message">Deleted %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_songs_channel_description">This is a channel for notifying you of new songs</string>
    <string name="new_songs">New Songs</string>
</resources>