<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/overall_padding"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/ivSongCover"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@color/black"
        android:contentDescription="@string/song_img_desc"
        android:src="@drawable/starboy_cover"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/song_name"
        android:textSize="@dimen/large_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ivSongCover" />

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artists"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/small_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongName" />

    <TextView
        android:id="@+id/tvPlayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />

    <ImageButton
        android:id="@+id/btnPlayButton"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/play_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNextButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPrevButton"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayCount"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/play_button" />

    <ImageButton
        android:id="@+id/btnNextButton"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/next_button_desc"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlayButton"
        app:layout_constraintTop_toTopOf="@+id/btnPlayButton"
        app:srcCompat="@drawable/next_button" />

    <ImageButton
        android:id="@+id/btnPrevButton"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/prev_button_desc"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlayButton"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlayButton"
        app:srcCompat="@drawable/prev_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
